--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MotorCycleVintage</string>
+
+    <string name="hello_world">Hello world! </string>
+    <string name="action_setting">Setting</string>
+
+    <string name="head"> อร่อย </string>
+    <string name="user">User :</string>
+    <string name="pass">Password :</string>
+    <string name="login">Login</string>
+
 </resources>
